fixed on iphone

--- a/css/index.css
+++ b/css/index.css
@@ -900,7 +900,7 @@ form .btn2{
   .about-img img{
     width: calc(100% - 2rem);
     margin-top: 40%;
-    margin-bottom: 34.8%;
+    margin-bottom: 55%;
     width: 200px; 
   }
   .about-text h2{
